--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,6 @@ p {
 }
 
 .main-content {
-  width: 100vw;
   max-height: max-content;
   padding-top: 50px;
   background: #8701CF;
@@ -50,31 +49,24 @@ p {
   font-weight: 800;
 }
 
+.imgOne, .imgTwo, .imgThree {
+  width: 600px;
+}
+
+.imgLogo {
+  width: 140px;
+}
+
+.divImgOne {
+  width: 600px;
+  margin-top: -220px;
+}
+
 .last-container {
   display: flex;
 }
 
-@media screen and (max-width: 768px) {
-  .text-main, .text-second-content {
-    font-size: 30px; 
-  }
-
-  p {
-    font-size: 25px;
-    line-height: 38px;
-  }
-
-  .last-container {
-    flex-direction: column;
-  }
-
-  .right-content, .left-content {
-    width: 100% !important;
-  }
-}
-
 .second-content {
-  width: 100vw;
   max-height: max-content;
   background: var(--orangeColor);
 }
@@ -145,6 +137,66 @@ p {
   border-radius: 4px;
 }
 
+.error-message {
+  color: red;
+}
+
+.msgSuccess {
+  height: 60px;
+  border-radius: 4px;
+  background: #DFDFDF;
+  color: #3EA90B;
+  ;
+}
+
+@media screen and (max-width: 768px) {
+  .text-main, .text-second-content {
+    font-size: 30px; 
+  }
+
+  p {
+    font-size: 25px;
+    line-height: 38px;
+  }
+
+  .last-container {
+    flex-direction: column;
+  }
+
+  .right-content, .left-content {
+    width: 100% !important;
+  }
+
+  .imgOne, .imgThree {
+    width: 250px;
+  }
+
+  .imgTwo {
+    width: 300px;
+  }
+
+  .divImgOne {
+    margin-top: 30px;
+  }
+  .divImgTwo {
+    margin-left: 84px;
+    margin-top: 40px;
+  }
+}
+
+@media (min-width: 1700px) and (max-width: 1900px) {
+  .divImgTwo {
+    margin-top: -150px;
+    padding-left: 332px;
+  }
+}
+
+@media (min-width: 1100px) and (max-width: 1500px) {
+  .divImgTwo {
+    margin-top: -150px;
+    padding-left: 120px;
+  }
+}
 
 
 
